# 3ngram

./: .coderabbit.yaml  .cspell.json  .gitattributes  .gitignore  .markdownlint.yaml  .mcp.json  .pre-commit-config.yaml  .yamllint.yaml  AGENTS.md  AI_CONTEXT.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PLANS.md  README.md  SECURITY.md  pyproject.toml
.beads/: .migration-hint-ts  config.yaml  issues.jsonl
.claude/agents/: database-reviewer.md  python-reviewer.md  security-reviewer.md  tdd-guide.md
.claude/rules/: database.md  security-auth.md
.claude/skills/architecture-knowledge/: SKILL.md
.claude/skills/repo-orientation/: SKILL.md
.claude/skills/schema-authoring/: SKILL.md
.claude/skills/spec-authoring/: SKILL.md
.coderabbit/: standards.md
.github/: copilot-instructions.md  mlc_config.json
.github/ISSUE_TEMPLATE/: bug-report.yml  claude-task.yml
.github/workflows/: auto-approve.yml  ci-test.yml  ci.yml
.kb/: ai-context.yaml
.quint/: context.md  quint.db  state.json
.quint/evidence/: 2026-02-14-internal-expand-ruff-rules-and-add-code-quality-tooling.md  2026-02-14-internal-wire-up-ci-gates-a-f-with-reusable-workflows.md
.quint/knowledge/L2/: expand-ruff-rules-and-add-code-quality-tooling.md  wire-up-ci-gates-a-f-with-reusable-workflows.md
docs/: TESTING.md
docs/architecture/: options-analysis-architecture.md  options-analysis-protocols.md
docs/architecture/adr/: ADR-001-monolith-first.md  ADR-002-dual-protocol.md  (+10 more)
docs/design/: module-autonomy.md  module-infrastructure.md  module-memory.md  module-retrieval.md  system-design.md
docs/governance/: project-charter.md  risk-register.md
docs/operations/: sli-slo.md
docs/planning/: backlog-milestones.md  project-intake.md  project-proposal.md  project-roadmap.md  requirements-prd.md
docs/specs/: technical-specification.md
plans/handoffs/: 2026-02-15_handoff.md  2026-02-15_i5_handoff.md
scripts/: check-frontmatter.py  markdownlint.sh  validate-version-refs.sh  vulture_whitelist.py
src/engram/: __init__.py
tests/: test_placeholder.py  test_smoke.py
