[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "engram"
version = "0.0.0"
description = "Agentic RAG memory system and AI technology stack"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Mark", email = "sh4i-yurei@users.noreply.github.com" },
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
    "vulture>=2.14",
    "pip-audit>=2.7",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF",
    "C90",   # mccabe complexity
    "C4",    # flake8-comprehensions
    "RET",   # flake8-return
    "S",     # flake8-bandit (security)
    "ARG",   # flake8-unused-arguments
    "PLR",   # pylint refactor
    "PLW",   # pylint warnings
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pylint]
max-args = 5
max-branches = 8
max-returns = 3
max-statements = 25

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]  # assert is expected in tests

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
